# agent-starter-kit

./: .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
src/agent_starter_kit/: __init__.py
src/agent_starter_kit/agent/: __init__.py  base.py  postprocess.py  prompt.py
src/agent_starter_kit/context/: __init__.py  cachemgr.py  taskmgr.py
src/agent_starter_kit/tools/context/: __init__.py  concurrent_task_manager.py
src/agent_starter_kit/tools/extract/: reference.py
src/agent_starter_kit/tools/search/: __init__.py  base.py  google_scholar.py  semantic_scholar.py  sementic_scholar.py
